# Object-Detection-based-Lidar-and-camera

./: .gitignore  README.md  test.rviz
src/detection_pkg/: package.xml
src/detection_pkg/CLOCs_LQS/: README.md  baseline.py  eval.py  kitti3d.py  test.ipynb  train.py  train_custom.py
src/detection_pkg/CLOCs_LQS/clocs_lqs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/detection_pkg/CLOCs_LQS/tool/: dataset.py  fusion.py
src/detection_pkg/MMLAB_based/: rosbag_pillars.py  test.ipynb  test.py
src/detection_pkg/SECOND_based/custom_model/: test.ipynb  train.py
src/detection_pkg/SECOND_based/second.pytorch/: test.py
src/detection_pkg/custom_model/: README.md  train.py
src/detection_pkg/custom_model/utils/: train_utils.py
src/detection_pkg/launch/: connect_lidar_camera.launch
src/detection_pkg/point_pillar/src/: get_velodyne_data.py  test.py
src/detection_pkg/rviz/: test_rviz.rviz
src/detection_pkg/second.pytorch/: second_example.py  test.py
src/detection_pkg/second.pytorch/second/: simple-inference.ipynb
src/detection_pkg/spconv-1.2.1/spconv.egg-info/: PKG-INFO
src/detection_pkg/src/: camera and lidar clib.py  real_lidar_pillars.py
src/detection_pkg/src/lib/: test.py
src/mecanum_pkg/mecanum_robot_description/: package.xml
src/mecanum_pkg/mecanum_robot_description/meshes/: mecanum_left.stl  mecanum_right.stl
src/mecanum_pkg/mecanum_robot_gazebo/: package.xml
src/mecanum_pkg/mecanum_robot_gazebo/config/: joint_state_controller.yaml  mecanum.yaml
src/mecanum_pkg/mecanum_robot_gazebo/launch/: mecanum_mobile_platform.launch  mecanum_object_detection.launch  mecanum_slam_world.launch  (+1 more)
src/mecanum_pkg/openrobot_control/: README  package.xml
src/mecanum_pkg/openrobot_control/include/: openrobot_control_6omni.h
src/mecanum_pkg/openrobot_control/launch/: openrobot_control_6omni.launch
src/mecanum_pkg/openrobot_control/src/: openrobot_control_6omni.cpp
src/mecanum_pkg/openrobot_vesc_rosdriver/openrobot_vesc_driver/: package.xml
src/mecanum_pkg/openrobot_vesc_rosdriver/openrobot_vesc_driver/include/openrobot_vesc_driver/: datatypes.h  v8stdint.h  vesc_driver.h  vesc_interface.h  vesc_packet.h  vesc_packet_factory.h
src/mecanum_pkg/openrobot_vesc_rosdriver/openrobot_vesc_driver/launch/: openrobot_vesc_driver_node.launch
src/mecanum_pkg/openrobot_vesc_rosdriver/openrobot_vesc_driver/src/: openrobot_vesc_driver.cpp  openrobot_vesc_driver_node.cpp  openrobot_vesc_interface.cpp  openrobot_vesc_packet.cpp  openrobot_vesc_packet_factory.cpp
src/mecanum_pkg/openrobot_vesc_rosdriver/openrobot_vesc_msgs/: package.xml
src/mecanum_pkg/openrobot_vesc_rosdriver/openrobot_vesc_msgs/msg/: VescGetCustomApp.msg  VescSetCommand.msg  VescSetCustomApp.msg  VescState.msg  VescStateStamped.msg
src/point_cloud_vis/kitti_object_vis/: data_tools.py  data_tools2.py  data_tools3.py  kitti_object.py  kitti_util.py  notebook_demo.ipynb  test (copy).ipynb  test.ipynb  test.py  test_2.py
src/test_pkg/: package.xml
src/velodyne_camera/: package.xml
(+56 files in other folders)
